lexer-py/generated/InterfacesParser.py
# Generated from c:/Users/germa/Go/lexer-task-2/Interfaces.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class InterfacesParser ( Parser ):

    grammarFileName = "Interfaces.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'auto'", "'iface'", "<INVALID>", "'static'", 
                     "'dhcp'", "'loopback'", "'address'", "'netmask'", "'gateway'", 
                     "'network'", "'broadcast'", "'dns-nameservers'", "'mapping'", 
                     "'script'", "'map'" ]

    symbolicNames = [ "<INVALID>", "AUTO", "IFACE", "INET", "STATIC", "DHCP", 
                      "LOOPBACK", "ADDRESS", "NETMASK", "GATEWAY", "NETWORK", 
                      "BROADCAST", "DNS_NAMESERVERS", "MAPPING", "SCRIPT", 
                      "MAP", "IP", "ID", "STRING", "WS", "COMMENT" ]

    RULE_file = 0
    RULE_statement = 1
    RULE_auto_stmt = 2
    RULE_iface_stmt = 3
    RULE_mapping_stmt = 4
    RULE_method = 5
    RULE_option = 6
    RULE_script_def = 7
    RULE_map_def = 8
    RULE_value = 9

    ruleNames =  [ "file", "statement", "auto_stmt", "iface_stmt", "mapping_stmt", 
                   "method", "option", "script_def", "map_def", "value" ]

    EOF = Token.EOF
    AUTO=1
    IFACE=2
    INET=3
    STATIC=4
    DHCP=5
    LOOPBACK=6
    ADDRESS=7
    NETMASK=8
    GATEWAY=9
    NETWORK=10
    BROADCAST=11
    DNS_NAMESERVERS=12
    MAPPING=13
    SCRIPT=14
    MAP=15
    IP=16
    ID=17
    STRING=18
    WS=19
    COMMENT=20

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class FileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(InterfacesParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(InterfacesParser.StatementContext)
            else:
                return self.getTypedRuleContext(InterfacesParser.StatementContext,i)


        def getRuleIndex(self):
            return InterfacesParser.RULE_file

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFile" ):
                listener.enterFile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFile" ):
                listener.exitFile(self)




    def file_(self):

        localctx = InterfacesParser.FileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_file)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 21 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 20
                self.statement()
                self.state = 23 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 8198) != 0)):
                    break

            self.state = 25
            self.match(InterfacesParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def auto_stmt(self):
            return self.getTypedRuleContext(InterfacesParser.Auto_stmtContext,0)


        def iface_stmt(self):
            return self.getTypedRuleContext(InterfacesParser.Iface_stmtContext,0)


        def mapping_stmt(self):
            return self.getTypedRuleContext(InterfacesParser.Mapping_stmtContext,0)


        def getRuleIndex(self):
            return InterfacesParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = InterfacesParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 30
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 27
                self.auto_stmt()
                pass
            elif token in [2]:
                self.enterOuterAlt(localctx, 2)
                self.state = 28
                self.iface_stmt()
                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 3)
                self.state = 29
                self.mapping_stmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Auto_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AUTO(self):
            return self.getToken(InterfacesParser.AUTO, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(InterfacesParser.ID)
            else:
                return self.getToken(InterfacesParser.ID, i)

        def getRuleIndex(self):
            return InterfacesParser.RULE_auto_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAuto_stmt" ):
                listener.enterAuto_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAuto_stmt" ):
                listener.exitAuto_stmt(self)




    def auto_stmt(self):

        localctx = InterfacesParser.Auto_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_auto_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 32
            self.match(InterfacesParser.AUTO)
            self.state = 34 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 33
                self.match(InterfacesParser.ID)
                self.state = 36 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==17):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Iface_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IFACE(self):
            return self.getToken(InterfacesParser.IFACE, 0)

        def ID(self):
            return self.getToken(InterfacesParser.ID, 0)

        def INET(self):
            return self.getToken(InterfacesParser.INET, 0)

        def method(self):
            return self.getTypedRuleContext(InterfacesParser.MethodContext,0)


        def option(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(InterfacesParser.OptionContext)
            else:
                return self.getTypedRuleContext(InterfacesParser.OptionContext,i)


        def getRuleIndex(self):
            return InterfacesParser.RULE_iface_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIface_stmt" ):
                listener.enterIface_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIface_stmt" ):
                listener.exitIface_stmt(self)




    def iface_stmt(self):

        localctx = InterfacesParser.Iface_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_iface_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 38
            self.match(InterfacesParser.IFACE)
            self.state = 39
            self.match(InterfacesParser.ID)
            self.state = 40
            self.match(InterfacesParser.INET)
            self.state = 41
            self.method()
            self.state = 45
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 8064) != 0):
                self.state = 42
                self.option()
                self.state = 47
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Mapping_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MAPPING(self):
            return self.getToken(InterfacesParser.MAPPING, 0)

        def ID(self):
            return self.getToken(InterfacesParser.ID, 0)

        def script_def(self):
            return self.getTypedRuleContext(InterfacesParser.Script_defContext,0)


        def map_def(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(InterfacesParser.Map_defContext)
            else:
                return self.getTypedRuleContext(InterfacesParser.Map_defContext,i)


        def getRuleIndex(self):
            return InterfacesParser.RULE_mapping_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMapping_stmt" ):
                listener.enterMapping_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMapping_stmt" ):
                listener.exitMapping_stmt(self)




    def mapping_stmt(self):

        localctx = InterfacesParser.Mapping_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_mapping_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            self.match(InterfacesParser.MAPPING)
            self.state = 49
            self.match(InterfacesParser.ID)
            self.state = 50
            self.script_def()
            self.state = 54
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==15:
                self.state = 51
                self.map_def()
                self.state = 56
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STATIC(self):
            return self.getToken(InterfacesParser.STATIC, 0)

        def DHCP(self):
            return self.getToken(InterfacesParser.DHCP, 0)

        def LOOPBACK(self):
            return self.getToken(InterfacesParser.LOOPBACK, 0)

        def getRuleIndex(self):
            return InterfacesParser.RULE_method

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethod" ):
                listener.enterMethod(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethod" ):
                listener.exitMethod(self)




    def method(self):

        localctx = InterfacesParser.MethodContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_method)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 112) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OptionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ADDRESS(self):
            return self.getToken(InterfacesParser.ADDRESS, 0)

        def IP(self, i:int=None):
            if i is None:
                return self.getTokens(InterfacesParser.IP)
            else:
                return self.getToken(InterfacesParser.IP, i)

        def NETMASK(self):
            return self.getToken(InterfacesParser.NETMASK, 0)

        def GATEWAY(self):
            return self.getToken(InterfacesParser.GATEWAY, 0)

        def NETWORK(self):
            return self.getToken(InterfacesParser.NETWORK, 0)

        def BROADCAST(self):
            return self.getToken(InterfacesParser.BROADCAST, 0)

        def DNS_NAMESERVERS(self):
            return self.getToken(InterfacesParser.DNS_NAMESERVERS, 0)

        def getRuleIndex(self):
            return InterfacesParser.RULE_option

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOption" ):
                listener.enterOption(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOption" ):
                listener.exitOption(self)




    def option(self):

        localctx = InterfacesParser.OptionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_option)
        self._la = 0 # Token type
        try:
            self.state = 75
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [7]:
                self.enterOuterAlt(localctx, 1)
                self.state = 59
                self.match(InterfacesParser.ADDRESS)
                self.state = 60
                self.match(InterfacesParser.IP)
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 2)
                self.state = 61
                self.match(InterfacesParser.NETMASK)
                self.state = 62
                self.match(InterfacesParser.IP)
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 3)
                self.state = 63
                self.match(InterfacesParser.GATEWAY)
                self.state = 64
                self.match(InterfacesParser.IP)
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 4)
                self.state = 65
                self.match(InterfacesParser.NETWORK)
                self.state = 66
                self.match(InterfacesParser.IP)
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 5)
                self.state = 67
                self.match(InterfacesParser.BROADCAST)
                self.state = 68
                self.match(InterfacesParser.IP)
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 6)
                self.state = 69
                self.match(InterfacesParser.DNS_NAMESERVERS)
                self.state = 71 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 70
                    self.match(InterfacesParser.IP)
                    self.state = 73 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==16):
                        break

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Script_defContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SCRIPT(self):
            return self.getToken(InterfacesParser.SCRIPT, 0)

        def value(self):
            return self.getTypedRuleContext(InterfacesParser.ValueContext,0)


        def getRuleIndex(self):
            return InterfacesParser.RULE_script_def

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterScript_def" ):
                listener.enterScript_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitScript_def" ):
                listener.exitScript_def(self)




    def script_def(self):

        localctx = InterfacesParser.Script_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_script_def)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(InterfacesParser.SCRIPT)
            self.state = 78
            self.value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Map_defContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MAP(self):
            return self.getToken(InterfacesParser.MAP, 0)

        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(InterfacesParser.ValueContext)
            else:
                return self.getTypedRuleContext(InterfacesParser.ValueContext,i)


        def getRuleIndex(self):
            return InterfacesParser.RULE_map_def

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMap_def" ):
                listener.enterMap_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMap_def" ):
                listener.exitMap_def(self)




    def map_def(self):

        localctx = InterfacesParser.Map_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_map_def)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(InterfacesParser.MAP)
            self.state = 81
            self.value()
            self.state = 82
            self.value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(InterfacesParser.STRING, 0)

        def ID(self):
            return self.getToken(InterfacesParser.ID, 0)

        def STATIC(self):
            return self.getToken(InterfacesParser.STATIC, 0)

        def DHCP(self):
            return self.getToken(InterfacesParser.DHCP, 0)

        def LOOPBACK(self):
            return self.getToken(InterfacesParser.LOOPBACK, 0)

        def getRuleIndex(self):
            return InterfacesParser.RULE_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValue" ):
                listener.enterValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValue" ):
                listener.exitValue(self)




    def value(self):

        localctx = InterfacesParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_value)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 393328) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





